--- a/penerimaan-petani.html
+++ b/penerimaan-petani.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Yotani Niaga</title>
+  <title>Yotani Niaga | Penerimaan Dari Petani</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">  
@@ -36,20 +36,20 @@
     
       <div class="collapse navbar-collapse font-weight-medium" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Beranda</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Dashboard</a>
+            <a class="nav-link" href="dashboard.html">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Profil Pabrik</a>
+          <a class="nav-link" href="profil-pabrik.html">Profil Pabrik</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Kelola Pengguna</a>
+          <a class="nav-link" href="kelola-pengguna.html">Kelola Pengguna</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Petani</a>
+          <a class="nav-link" href="petani.html">Petani</a>
           </li>
           <li class="nav-item active dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -58,70 +58,64 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="kuota-pabrik.html">Kuota Pabrik</a>
               <a class="dropdown-item" href="">Penerimaan Dari Petani</a>
-              <!-- <div class="dropdown-divider"></div> -->
               <a class="dropdown-item" href="pembayaran.html">Pembayaran</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="list-harga.html">List Harga</a>
+          <a class="nav-link" href="list-harga.html">List Harga</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Report</a>
+          <a class="nav-link" href="report.html">Report</a>
           </li>
         </ul>
+        <!-- Notif -->
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown notification-wrap no-arrow">
+            <li class="nav-item dropdown notification-wrap no-arrow">
             <a class="nav-link notif" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fa fa-bell fa-fw green"></i>
-              <!-- Counter - Alerts -->
-              <span class="badge badge-warning badge-counter navbar-badge"> </span>
+                <i class="fa fa-bell fa-fw green"></i>
+                <!-- Counter - Alerts -->
+                <span class="badge badge-warning badge-counter navbar-badge"> </span>
             </a>
             <!-- Dropdown - Alerts -->
             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
-              <h6 class="dropdown-header">
+                <h6 class="dropdown-header">
                 Alerts Center
-              </h6>
-              <a class="dropdown-item d-flex align-items-center" href="#">
+                </h6>
+                <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="mr-3">
-                  <div class="icon-circle bg-primary">
+                    <div class="icon-circle bg-primary">
                     <i class="fas fa-file-alt text-white"></i>
-                  </div>
+                    </div>
                 </div>
                 <div>
-                  <div class="small text-gray-500">December 12, 2019</div>
-                  <span class="font-weight-bold">A new monthly report is ready to download!</span>
+                    <div class="small text-gray-500">December 12, 2019</div>
+                    <span class="font-weight-bold">A new monthly report is ready to download!</span>
                 </div>
-              </a>
-              <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
+                </a>
+                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
             </div>
-          </li>
-          <li class="nav-item dropdown no-arrow">
+            </li>
+            <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <img class="img-profile rounded-circle mr-1" width="24px" height="24px" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
-              <span class="mr-3 d-none d-lg-inline font-weight-normal">Valerie Luna</span>
+                <img class="img-profile rounded-circle mr-1" width="24px" height="24px" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                <span class="mr-3 d-none d-lg-inline font-weight-normal">Valerie Luna</span>
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-              <a class="dropdown-item" href="#">
-                <i class="fa fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                <a class="dropdown-item" href="">
                 Profile
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="fa fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                </a>
+                <a class="dropdown-item" href="settings.html">
                 Settings
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="fa fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                Activity Log
-              </a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                <i class="fa fa-sign-out fa-sm fa-fw mr-2 text-gray-400"></i>
+                </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="login.html" data-toggle="" data-target="">
                 Logout
-              </a>
+                </a>
             </div>
-          </li>
+            </li>
         </ul>
+        <!-- /Notif -->
       </div>
     </nav>
   </header>
