--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/libs/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="assets/css/icons/fontawesome/styles.min.css">
+  <link rel="stylesheet" href="assets/css/basic.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
   <link rel="stylesheet" href="assets/libs/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
@@ -135,7 +136,88 @@
           <div class="container-fluid no-padding">
               <div class="card">
                   <div class="card-body">
-                      On Queue
+                      <div class="mb-4 col-md-12 no-padding">
+                        <div class="pl-0 col-md-6">
+                            <div class="highlight-price bg-hijau p-3 mr-2 col col-md-12">
+                              <div class="col col-md-7">
+                                <p class="small no-margin">Harga TBS wilayah Sumatera Utara</p>
+                              </div>
+                              <div class="text-right col-md-5">
+                                <b>Rp 1.377,25</b>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="pr-0 col-md-6">
+                            <div class="highlight-price bg-hijau p-3 mr-2 col col-md-12">
+                              <div class="col col-md-7">
+                                <p class="small no-margin">Harga TBS wilayah Sumatera Utara</p>
+                              </div>
+                              <div class="text-right col-md-5">
+                                <b>Rp 1.377,25</b>
+                              </div>
+                            </div>
+                        </div>
+                      </div>
+                      <div class="font-title align-items-center col-md-12">
+                        <h6 class="col col-md-8 no-padding no-margin">Berita</h6>
+                        <div class="col col-md-4 no-padding">
+                          <div class="input-group input-search">
+                            <input type="text" class="form-control" placeholder="Cari berita" aria-label="Recipient's username" aria-describedby="button-addon2">
+                            <div class="input-group-append">
+                              <button class="btn btn-third" type="button" id="button-addon2"><i class="fa fa-search"></i></button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="container news">
+                        <div class="row">
+                          <div class="col">
+                            <a href="">
+                              <img class="card-img-top" src="assets/img/news-img-1.png" alt="Card image cap">
+                              <div class="card-body">
+                                <h5 class="card-title">Sektor Perkebunan Kelapa Sawit Mesti Dijaga</h5>
+                                <small class="card-text">Kamis , 14 Desember 2019 | 12:05 WIB</small>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="col">
+                            <a href="">
+                              <img class="card-img-top" src="assets/img/news-img-2.png" alt="Card image cap">
+                              <div class="card-body">
+                                <h5 class="card-title">Gub Kalbar: Sektor Sawit Didorong Kembangkan …</h5>
+                                <small class="card-text">Kamis , 14 Desember 2019 | 12:05 WIB</small>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="col">
+                            <a href="">
+                              <img class="card-img-top" src="assets/img/news-img-1.png" alt="Card image cap">
+                              <div class="card-body">
+                                <h5 class="card-title">Mengubah Janji Menjadi Aksi Untuk Minyak Sawit …</h5>
+                                <small class="card-text">Kamis , 14 Desember 2019 | 12:05 WIB</small>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="col">
+                            <a href="">
+                              <img class="card-img-top" src="assets/img/news-img-2.png" alt="Card image cap">
+                              <div class="card-body">
+                                <h5 class="card-title">Gub Kalbar: Sektor Sawit Didorong Kembangkan …</h5>
+                                <small class="card-text">Kamis , 14 Desember 2019 | 12:05 WIB</small>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="col">
+                            <a href="">
+                              <img class="card-img-top" src="assets/img/news-img-1.png" alt="Card image cap">
+                              <div class="card-body">
+                                <h5 class="card-title">Mengubah Janji Menjadi Aksi Untuk Minyak Sawit …</h5>
+                                <small class="card-text">Kamis , 14 Desember 2019 | 12:05 WIB</small>
+                              </div>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
                   </div>
               </div>
           </div>
